# typer-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_name}}.py
